WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13871
Box shadow should not apply to Aqua-themed controls
https://bugs.webkit.org/show_bug.cgi?id=13871
Summary
Box shadow should not apply to Aqua-themed controls
mitz
Reported
2007-05-25 04:16:25 PDT
See the URL for example.
Attachments
Remove box shadow from Aqua controls
(50.12 KB, patch)
2007-05-25 04:20 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-25 04:20:12 PDT
Created
attachment 14717
[details]
Remove box shadow from Aqua controls
Darin Adler
Comment 2
2007-05-25 08:06:12 PDT
Comment on
attachment 14717
[details]
Remove box shadow from Aqua controls r=me
Mark Rowe (bdash)
Comment 3
2007-05-26 06:53:14 PDT
Landed in
r21796
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug