2007-05-26  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - http://bugs.webkit.org/show_bug.cgi?id=13871
          Box shadow should not apply to Aqua-themed controls

        Test: fast/forms/box-shadow-override.html

        * rendering/RenderTheme.cpp:
        (WebCore::RenderTheme::adjustCheckboxStyle):
        (WebCore::RenderTheme::adjustRadioStyle):
        * rendering/RenderThemeMac.h:
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::adjustButtonStyle):
        (WebCore::RenderThemeMac::adjustMenuListStyle):
        (WebCore::RenderThemeMac::adjustSliderTrackStyle):
        (WebCore::RenderThemeMac::adjustSearchFieldStyle):
        (WebCore::RenderThemeMac::adjustSearchFieldCancelButtonStyle):
        (WebCore::RenderThemeMac::adjustSearchFieldDecorationStyle):
        (WebCore::RenderThemeMac::adjustSearchFieldResultsDecorationStyle):
        (WebCore::RenderThemeMac::adjustSearchFieldResultsButtonStyle):

2007-05-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13871
          Box shadow should not apply to Aqua-themed controls

        * fast/forms/box-shadow-override-expected.checksum: Added.
        * fast/forms/box-shadow-override-expected.png: Added.
        * fast/forms/box-shadow-override-expected.txt: Added.
        * fast/forms/box-shadow-override.html: Added.


Canonical link: https://commits.webkit.org/18198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21796 268f45cc-cd09-0410-ab3c-d52691b4dbfc